// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`스냅샷 > 접힌 상태의 구조가 스냅샷과 일치한다 1`] = `
<div
  class="space-y-4"
>
  <div
    class="relative"
  >
    <div
      class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <span
      class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 bg-white px-3 text-xs text-gray-400"
    >
      또는
    </span>
  </div>
  <button
    aria-controls="direct-input-panel"
    aria-expanded="false"
    class="flex w-full items-start gap-2 px-2 py-1.5 rounded-md text-left transition-colors hover:bg-gray-50"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-right h-4 w-4 mt-0.5 shrink-0 text-gray-400 transition-transform duration-200"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
    <div>
      <span
        class="text-sm text-gray-600"
      >
        운영자가 직접 입력하기
      </span>
      <p
        class="text-xs text-gray-400"
      >
        전화·대면 등 오프라인으로 답변받은 경우
      </p>
    </div>
  </button>
</div>
`;

exports[`스냅샷 > 펼친 상태의 구조가 스냅샷과 일치한다 1`] = `
<div
  class="space-y-4"
>
  <div
    class="relative"
  >
    <div
      class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <span
      class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 bg-white px-3 text-xs text-gray-400"
    >
      또는
    </span>
  </div>
  <button
    aria-controls="direct-input-panel"
    aria-expanded="true"
    class="flex w-full items-start gap-2 px-2 py-1.5 rounded-md text-left transition-colors hover:bg-gray-50"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-right h-4 w-4 mt-0.5 shrink-0 text-gray-400 transition-transform duration-200 rotate-90"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
    <div>
      <span
        class="text-sm text-gray-600"
      >
        운영자가 직접 입력하기
      </span>
      <p
        class="text-xs text-gray-400"
      >
        전화·대면 등 오프라인으로 답변받은 경우
      </p>
    </div>
  </button>
  <div
    class="animate-in fade-in slide-in-from-top-1 duration-200"
    id="direct-input-panel"
  >
    <div
      data-testid="self-assessment-form"
    >
      자가진단 폼
    </div>
  </div>
</div>
`;
